[project]
name = "libmultilabel"
version = "0.2.0"
description = "A library for multi-label text classification"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
author = "LibMultiLabel Team"
keywords = ["multi-label", "multi-class", "text classification"]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA :: 11.6",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "nltk",
    "pandas>1.3.0",
    "PyYAML",
    "scikit-learn",
    "torch>=1.13.1",
    "torchmetrics==0.10.3",
    "torchtext>=0.13.0",
    "pytorch-lightning==1.7.7",
    "tqdm",
    "liblinear-multicore",
    "numba",
    "scipy",
    "transformers",
]

[project.optional-dependencies] # Optional
dev = [
    "black",
    "pre-commit"
]

[project.urls]
"Homepage" = "https://github.com/ASUS-AICS/LibMultiLabel"
"Bug Reports" = "https://github.com/ASUS-AICS/LibMultiLabel/issues"
"Documentation" = "https://www.csie.ntu.edu.tw/~cjlin/libmultilabel"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
force-exclude = "^/docs*"